2017 april
+ coords translation tool
* single application mode megafix

2017 feb
+ cliptpl.txt to format clipboard pieces captured to the storage file 
+ Fm - Multi-rename
                   + Zero pad file names
                   + Delete N first chars at file names
                   + Replace in file names
                   + Apply template

2016 sept - 43.1.0
* Fixes to the manuals
* segfault (43.0.0 affected) on exit fixed
* Russian translation update
* some new options

2016 aug-sept //for more see github stats
+ Tune - Images - Use EXIF orientation at image viewer
+ Tune - Images - Apply hard rotation by EXIF data
+ new themes and palettes
+ new hls file format
+ optional libpoppler support (see README) for text extraction from PDF
+ optional DJVU text extractor

+ Tune - Interface - Cursor blink time (msecs), set to zero to turn blinking off
+ Tune - Interface - Cursor width
* Tune pages are scrollable
+ Functions - Tools - Scale image
* %fext, %ffilename, %fdir, %fbasename macros are %ext, %filename, %dir, %basename now
+ Search - Mark all found
+ Search - Unmark
- Alt-S, Alt-E hardcoded
+ Tune::Common - Use Left Alt + WASD as additional cursor keys
   LALT + WASD = cursor movement
   LALT + E, C = page up/down
   LWIN and the same keys = select text
+ Functions - Repeat last
* all hls updated to the new format
	
+ GIF animation support on the image preview
+ File - Do not add to recent
+ prefs UI redesign
+ Functions - Text - Compress //removes all whitespaces from selection
+ Functions - Sort - Flip a list with separator, Sort case sensitively, with separator
* Instr menu renamed to Tools and moved into Functions
+ initial themed icons support

2016 summer
+ basic Markdown support
+ file path elements in command line to call external program
* palettes fix
* English manual fix by Dr. Tobias Quathamer.
* other fixes

2016
+ Functions - math - Sum by last column

2015/September

*goto line function fixed


2015/July

* qmake prefix option fixed