@@ -1,0 +1,29 @@
+<document exts="awk" langs="awk">
+
+<item name="options" wrap="0" xml_format="1"> 
+</item>
+
+<item name="keywords" type="keywords" color="keywords" fontstyle="bold">\b(BEGIN|END|if|for|in|else|while|do|break|continue|exit)\b</item>
+
+<item name="variables" type="keywords" color="keywords" fontstyle="bold">\b(ARGIND|ARGC|ARGV|BINMODE|ENVIRON|ERRNO|FILENAME|FIELDWIDTHS|FS|FNR|IGNORECASE|IF|LINT|PROCINFO|TEXTDOMAIN|NF|NR|OFMT|OFS|ORS|RLENGTH|RS|RSTART|SUBSEP)\b</item>
+
+
+<item name="functions" type="keywords" color="functions">\b(print|printf)\b</item>
+
+<item name="preproc" type="item" color="preproc" fontstyle="italic">^#.*</item>
+
+<item name="quotes" type="item" color="quotes">("[^\"]*")</item>
+
+<item name="char" type="item" color="quotes">('[^']*')</item>
+
+<item name="single comment" type="item" color="single comment" fontstyle="italic">--[^\n]*</item>
+
+<item name="mcomment-start" type="mcomment-start" color="mcomment-start" fontstyle="italic">--\[\[</item>
+
+<item name="mcomment-end" type="mcomment-end">--\]\]</item>
+
+<item name="cm_mult" type="comment">--[[%s--]]</item>
+
+<item name="cm_single" type="comment">--%s</item>
+
+</document>
