@@ -210,6 +210,8 @@
 <a name="mni_edit"></a>
 <h3>Edit</h3>
 
+<p>About the rectangular or block selection. TEA has such limited ability that is not feets TEA's architecture well, and text-processing functions cannot be uses with block selections. All what you can do with them it is select using <b>Block start</b> and <b>Block end</b>, and then <b>Copy block</b>, <b>Cut block</b> and <b>Paste block</b>.</p>
+
 <p>Some notes about <b>Indent/Un-indent</b> functions. There are two hardcoded keyboard shortcuts are assigned to this functions - Tab and Shift-Tab. If no text selected, <b>Indent (Tab)</b> inserts a tab character or a space (spaces). Such behavior is depended from <b>Options &gt; Interface &gt; Use spaces instead of tabs</b> and <b>Tab width in spaces</b> options.</p>
 
 <p>If <b>Use spaces instead of tabs</b> is checked on, the editor will insert (by Tab key) the number of spaces that defined at <b>Tab width in spaces</b>. Otherwise, TEA inserts a single tab.</p>
