@@ -202,6 +202,8 @@
 <a name="mni_edit"></a>
 <h2>Правка</h2>
 
+<p>О прямоугольном или блочном выделении. Оно не шибко вписывается в архитектуру TEA. Функции обработки текста к нему неприменимы. Всё, что можно делать с прямоугольным выделением, это создать его при помощи <b>Начало блока</b> и <b>Конец блока</b>, а затем <b>Копировать блок</b>, <b>Вставить блок</b> или <b>Вырезать блок</b>.</p>
+
 <p>Пара замечаний о пунктах меню <b>Отступ</b> и <b>Отменить отступ</b>. За ними железно закреплены клавиши Tab и Shift-Tab. Если выделен текст (много строк), то происходит его сдвиг влево или вправо путем вставки или удаления пробелов либо табов. Если текст не выделен, в место курсора вставляется один таб либо пробелы числом, заданным в <b>Наладка &gt; Функции &gt; Ширина таба в пробелах</b>. На поведение нажатия Tab влияет опция <b>Наладка &gt; Интерфейс &gt; Использовать пробелы вместо табов</b>.</p>
 
 <p><b>Отступ по первой строке</b> - делает отступ всем выделенным строкам такой же, как в первой выделенной строке.</p>
