@@ -2,6 +2,9 @@
 + coords translation tool
 * single application mode megafix
 
+2017
++ basic block selections
+
 2017 feb
 + cliptpl.txt to format clipboard pieces captured to the storage file 
 + Fm - Multi-rename
